prefs: use Gtk/DecorationLayout only under GNOME-Flashback

https://bugzilla.gnome.org/show_bug.cgi?id=757044